# AdvancedTicTacToe

./:  README.md  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  deploy.yml
resources/: resources.qrc  styles.qss
src/: main.cpp
src/game/: ai.cpp  ai.h  board.cpp  board.h  game.cpp  game.h  gametypes.h  humanplayer.cpp  humanplayer.h  player.cpp  player.h
src/gui/: gamewindow.cpp  gamewindow.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  test_ai.cpp  test_board.cpp  test_game.cpp
